[project]
name = "restuarant-agent"
version = "0.1.0"
description = "A sophisticated multi-agent voice conversation system for restaurants handling reservations, takeaway orders, and checkout processes"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "livekit-agents[cartesia,deepgram,mcp,openai,silero]~=1.0",
    "livekit-plugins-noise-cancellation~=0.2",
    "python-dotenv>=1.1.0",
    "PyYAML>=6.0",
]
